--- a/src/main/webapp/views/device-info.html
+++ b/src/main/webapp/views/device-info.html
@@ -98,26 +98,26 @@
 
     <div class="button-container-form">
 
-      <div ng-show="componentDevice.deploymentData.deleteStatus === componentDevice.deploymentData.operationStatus.IN_PROGRESS">
+      <div ng-show="componentDevice.deviceData.deleteStatus === componentDevice.deviceData.operationStatus.IN_PROGRESS">
         <div class="spinner-small-container">
           <div class="spinner-small">
           </div>
         </div>
       </div>
 
-      <div ng-show="componentDevice.deploymentData.deleteStatus === componentDevice.deploymentData.operationStatus.FAILURE">
+      <div ng-show="componentDevice.deviceData.deleteStatus === componentDevice.deviceData.operationStatus.FAILURE">
         <div class="message-container error">
           <span>Error!</span>
         </div>
       </div>
 
-      <div ng-show="componentDevice.deploymentData.deleteStatus === componentDevice.deploymentData.operationStatus.SUCCESS">
+      <div ng-show="componentDevice.deviceData.deleteStatus === componentDevice.deviceData.operationStatus.SUCCESS">
         <div class="message-container success">
           <span>Deleted!</span>
         </div>
       </div>
 
-      <div class="info-button-container" ng-show="componentDevice.deploymentData.deleteStatus === componentDevice.deploymentData.operationStatus.NOT_STARTED">
+      <div class="info-button-container" ng-show="componentDevice.deviceData.deleteStatus === componentDevice.deviceData.operationStatus.NOT_STARTED">
         <button type="submit" class="info-button" ng-click="componentDevice.deleteDevice()">
           <span>Delete</span>
         </button>
