--- a/src/main/webapp/views/maintenance-panel.html
+++ b/src/main/webapp/views/maintenance-panel.html
@@ -8,7 +8,7 @@
     <div class="option-header-right">
       <div class="square-header-button"
            ng-class="{ 'button-header-active' : ('main.maintenance_panel.add_maintenance' | routeSegmentEqualsTo) }"
-           title="Create Deployment Installation"
+           title="Create Ticket"
            ng-click="maintenance.goToAddMaintenance()">
         <span class="glyphicon glyphicon-plus"></span>
       </div>
