--- a/src/main/webapp/views/about-component-configurator.html
+++ b/src/main/webapp/views/about-component-configurator.html
@@ -3,6 +3,8 @@
     <h3>About - Component Configurator</h3>
   </div>
   <div class="about-info-inner">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae deleniti dicta, eligendi error, eveniet facilis fugiat iure magnam nemo optio pariatur quasi quibusdam quidem repellat, sequi ullam vero! Officia?
+    The Component Configuration is a web application for creating or editing the platforms and devices built into the system.
+    <br>
+    The purpose of this tool is to provide an easy and user-friendly graphical interface to list and configure the different components (devices, services or platforms) currently deployed and running in a deployment unit
   </div>
 </div>
