--- a/src/main/webapp/views/about-deployment-manager.html
+++ b/src/main/webapp/views/about-deployment-manager.html
@@ -3,6 +3,8 @@
     <h3>About - Deployments Manager</h3>
   </div>
   <div class="about-info-inner">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae deleniti dicta, eligendi error, eveniet facilis fugiat iure magnam nemo optio pariatur quasi quibusdam quidem repellat, sequi ullam vero! Officia?
+    The deployment manager tool provides a graphical interface through which the deployer can create/edit a specific deployment installation and have an overview of the deployment inventory, along with its installed devices and services.
+    <br>
+    Through the deployment manager, the deployer can edit/view the component installation characteristics, such as the locations where devices are installed, their current operational status, etc.
   </div>
 </div>
