--- a/src/main/webapp/views/about-maintenance-panel.html
+++ b/src/main/webapp/views/about-maintenance-panel.html
@@ -3,6 +3,8 @@
     <h3>About - Maintenance Panel</h3>
   </div>
   <div class="about-info-inner">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae deleniti dicta, eligendi error, eveniet facilis fugiat iure magnam nemo optio pariatur quasi quibusdam quidem repellat, sequi ullam vero! Officia?
+    The Component Configuration is a web application for facilitate the deployer in performing maintenance activities in a deployment installation.
+    <br>
+    The purpose of this tool is to provide an easy and user-friendly maintenance panel’s interface to view the operating status of all components (deployments and devices) installed in a deployment unit. Operating status includes possible malfunctions of devices or services, battery levels, etc.
   </div>
 </div>
