Development module improvements

--- a/src/main/webapp/views/update-deployment.html
+++ b/src/main/webapp/views/update-deployment.html
@@ -2,7 +2,7 @@
 
   <div class="option-header">
     <div class="option-header-left">
-      <h3>Update Deployment:  {{updateCtrl.currentDeployment.id}}</h3>
+      <h3>Update Deployment: {{updateCtrl.currentDeployment.id}}</h3>
     </div>
     <div class="close-info" title="Close window" ng-click="updateCtrl.closeCreateDeployment()">
       <span class="glyphicon glyphicon-remove"></span>
@@ -27,7 +27,8 @@
       <input type="text" disabled placeholder="Organization Id" ng-model="updateCtrl.currentDeployment.organizationId">
       <label class="form-label">Organization Id:</label>
 
-      <input type="text" disabled placeholder="Organization Label" ng-model="updateCtrl.currentDeployment.organizationLabel">
+      <input type="text" disabled placeholder="Organization Label"
+             ng-model="updateCtrl.currentDeployment.organizationLabel">
       <label class="form-label">Organization Label:</label>
 
       <hr class="line">
@@ -44,7 +45,8 @@
         Devices:
       </div>
 
-      <div class="deployment-device-container" ng-repeat="device in updateCtrl.currentDeployment.devices">
+      <div class="deployment-device-container"
+           ng-repeat="device in updateCtrl.deploymentData.currentDeployment.platform.devices">
         <div class="info-left">
           <span>{{device}}</span>
         </div>
@@ -52,23 +54,26 @@
         <div class="right-button-container"
              title="Delete Device {{device}}"
              ng-click="updateCtrl.deploymentService.deleteDeviceFromDeployment(updateCtrl.currentDeployment.id, device)"
-             ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.NOT_STARTED">
+             ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] !== updateCtrl.deploymentData.operationStatus.IN_PROGRESS">
           <span class="glyphicon glyphicon-trash"></span>
         </div>
-        <div ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.IN_PROGRESS">
+        <div
+          ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.IN_PROGRESS">
           <div class="spinner-small-container">
             <div class="spinner-small">
             </div>
           </div>
         </div>
 
-        <div ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.FAILURE">
+        <div
+          ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.FAILURE">
           <div class="message-container error">
             <span>Error!</span>
           </div>
         </div>
 
-        <div ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.SUCCESS">
+        <div
+          ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.SUCCESS">
           <div class="message-container success">
             <span>Deleted!</span>
           </div>
@@ -90,23 +95,26 @@
         <div class="right-button-container"
              title="Add Device {{newDevice}}"
              ng-click="updateCtrl.deploymentService.addDeviceToDeployment(updateCtrl.deploymentData.currentDeployment.id, newDevice)"
-             ng-show="updateCtrl.deploymentData.addStatus[newDevice] === updateCtrl.deploymentData.operationStatus.NOT_STARTED">
+             ng-show="updateCtrl.deploymentData.addStatus[newDevice] !== updateCtrl.deploymentData.operationStatus.IN_PROGRESS">
           <span class="glyphicon glyphicon-plus"></span>
         </div>
-        <div ng-show="updateCtrl.deploymentData.addStatus[newDevice] === updateCtrl.deploymentData.operationStatus.IN_PROGRESS">
+        <div
+          ng-show="updateCtrl.deploymentData.addStatus[newDevice] === updateCtrl.deploymentData.operationStatus.IN_PROGRESS">
           <div class="spinner-small-container">
             <div class="spinner-small">
             </div>
           </div>
         </div>
 
-        <div ng-show="updateCtrl.deploymentData.addStatus[newDevice] === updateCtrl.deploymentData.operationStatus.FAILURE">
+        <div
+          ng-show="updateCtrl.deploymentData.addStatus[newDevice] === updateCtrl.deploymentData.operationStatus.FAILURE">
           <div class="message-container error">
             <span>Error!</span>
           </div>
         </div>
 
-        <div ng-show="updateCtrl.deploymentData.addStatus[newDevice] === updateCtrl.deploymentData.operationStatus.SUCCESS">
+        <div
+          ng-show="updateCtrl.deploymentData.addStatus[newDevice] === updateCtrl.deploymentData.operationStatus.SUCCESS">
           <div class="message-container success">
             <span>Added!</span>
           </div>
@@ -116,15 +124,6 @@
       <hr class="line">
 
       <div class="button-container-form">
-
-
-
-<!--        <div class="info-button-container" ng-show="updateCtrl.deploymentData.addDeviceStatus === updateCtrl.deploymentData.operationStatus.NOT_STARTED">
-
-          &lt;!&ndash;<button type="submit" class="info-button" ng-click="updateCtrl.addDevices()">
-            <span>Add Devices</span>
-          </button>&ndash;&gt;
-        </div>-->
 
       </div>
 
