--- a/src/main/webapp/views/update-editor.html
+++ b/src/main/webapp/views/update-editor.html
@@ -23,20 +23,23 @@
     <div class="button-container-form">
 
       <div class="button-container-left">
-        <div ng-show="updateEditor.registryData.update_info_status === updateEditor.registryData.operationStatus.IN_PROGRESS">
+        <div
+          ng-show="updateEditor.registryData.update_info_status[updateEditor.registryData.currentImageId] === updateEditor.registryData.operationStatus.IN_PROGRESS">
           <div class="spinner-small-container">
             <div class="spinner-small">
             </div>
           </div>
         </div>
 
-        <div ng-show="updateEditor.registryData.update_info_status === UpdateEditor.registryData.operationStatus.FAILURE">
+        <div
+          ng-show="updateEditor.registryData.update_info_status[updateEditor.registryData.currentImageId] === updateEditor.registryData.operationStatus.FAILURE">
           <div class="message-container error">
             <span>Error!</span>
           </div>
         </div>
 
-        <div ng-show="updateEditor.registryData.update_info_status === updateEditor.registryData.operationStatus.SUCCESS">
+        <div
+          ng-show="updateEditor.registryData.update_info_status[updateEditor.registryData.currentImageId] === updateEditor.registryData.operationStatus.SUCCESS">
           <div class="message-container success">
             <span>Updated!</span>
           </div>
