--- a/src/main/webapp/views/update-info.html
+++ b/src/main/webapp/views/update-info.html
@@ -29,40 +29,50 @@
 
   <div class="option-device-container">
 
-    <div ng-show="updateInfo.registryData.retrieve_image_status === updateInfo.registryData.operationStatus.IN_PROGRESS">
+    <div
+      ng-show="updateInfo.registryData.retrieve_info_status[updateInfo.registryData.currentImageId] === updateInfo.registryData.operationStatus.IN_PROGRESS">
       <div class="spinner-container">
         <div class="spinner">
         </div>
       </div>
     </div>
-    <div ng-show="updateInfo.registryData.retrieve_image_status === updateInfo.registryData.operationStatus.FAILURE">
+    <div
+      ng-show="updateInfo.registryData.retrieve_info_status[updateInfo.registryData.currentImageId] === updateInfo.registryData.operationStatus.FAILURE">
       <div class="message-container-100 error">
-        <span>Cannot retrieve image</span>
+        <span>Cannot retrieve image information</span>
       </div>
     </div>
-    <!--<div ng-show="updateInfo.registryData.retrieve_image_status === updateInfo.registryData.operationStatus.SUCCESS" class="current-title">-->
     <div ng-show="true" class="current-title">
 
-      <h3>{{updateInfo.registryData.currentImage}}</h3>
+      <h3>{{updateInfo.registryData.currentImageId}}</h3>
 
     </div>
 
     <div class="tags-container">
       <span class="glyphicon glyphicon-tags tag-icon"></span> <h4>Tags</h4>
-      <span class="label label-primary label-bg" ng-repeat="tag in updateInfo.tags">{{tag}}</span>
+      <span class="label label-primary label-bg"
+            ng-repeat="tag in updateInfo.registryData.imagesData[updateInfo.registryData.currentImageId].tags">{{tag}}</span>
     </div>
+
 
     <div class="description-container">
       <span class="glyphicon glyphicon-book description-icon"></span> <h4>Description</h4>
       <div class="description-update-container">
-        <p markdown-to-html="updateInfo.descriptionMarkdown"></p>
+        <p ng-show="updateInfo.registryData.imagesData[updateInfo.registryData.currentImageId].info !== undefined"
+           markdown-to-html="updateInfo.registryData.imagesData[updateInfo.registryData.currentImageId].infoHTML"></p>
+        <p ng-show="updateInfo.registryData.imagesData[updateInfo.registryData.currentImageId].info === undefined">This
+          image does not provide description.</p>
       </div>
     </div>
 
-    <button type="submit" class="info-button" ng-click="updateInfo.editDescription()">
+    <button ng-show="updateInfo.registryData.imagesData[updateInfo.registryData.currentImageId].info !== undefined"
+            type="submit" class="info-button" ng-click="updateInfo.editDescription()">
       <span class="glyphicon glyphicon-edit edit-description-icon"></span> <span>Edit Description</span>
     </button>
-
+    <button ng-show="updateInfo.registryData.imagesData[updateInfo.registryData.currentImageId].info === undefined"
+            type="submit" class="info-button" ng-click="updateInfo.editDescription()">
+      <span class="glyphicon glyphicon-edit edit-description-icon"></span> <span>Create Description</span>
+    </button>
   </div>
 
 </div>
