--- a/src/main/webapp/views/update-manager.html
+++ b/src/main/webapp/views/update-manager.html
@@ -1,23 +1,25 @@
 <div class="menu-container">
 
   <div class="menu-bar" ng-click="openMenu = !openMenu">
-    <span>{{updateManager.registryData.currentImage}}</span>
+    <span>{{updateManager.registryData.currentImageId}}</span>
     <div class="menu-square" ng-class="{'menu-square-active' : openMenu}">
       <span class="glyphicon glyphicon-chevron-down"></span>
     </div>
   </div>
 
 
-  <div ng-show="updateManager.registryData.retrieve_image_status === updateManager.registryData.operationStatus.IN_PROGRESS">
+  <div
+    ng-show="updateManager.registryData.retrieve_image_status === updateManager.registryData.operationStatus.IN_PROGRESS">
     <div class="spinner-very-small-container">
       <div class="spinner-very-small">
       </div>
     </div>
   </div>
 
-  <div ng-show="updateManager.registryData.retrieve_image_status === updateManager.registryData.operationStatus.FAILURE">
+  <div
+    ng-show="updateManager.registryData.retrieve_image_status === updateManager.registryData.operationStatus.FAILURE">
     <div class="message-container-100 error">
-      <span>Cannot retrieve platforms</span>
+      <span>Cannot retrieve images</span>
     </div>
   </div>
 
@@ -30,37 +32,5 @@
       </div>
     </div>
   </div>
-
-  <!--<p></p>-->
-
-  <!--<div class="menu-bar" ng-click="openMenu2 = !openMenu2">-->
-    <!--<span>{{component.getSelectedClient()}}</span>-->
-    <!--<div class="menu-square" ng-class="{'menu-square-active' : openMenu2}">-->
-      <!--<span class="glyphicon glyphicon-chevron-down"></span>-->
-    <!--</div>-->
-  <!--</div>-->
-
-  <!--<div ng-show="updateManager.registryData.retrievalStatus === updateManager.registryData.operationStatus.IN_PROGRESS">-->
-    <!--<div class="spinner-very-small-container">-->
-      <!--<div class="spinner-very-small">-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-
-  <!--<div ng-show="updateManager.registryData.retrievalStatus === updateManager.registryData.operationStatus.FAILURE">-->
-    <!--<div class="message-container-100 error">-->
-      <!--<span>Cannot retrieve clients</span>-->
-    <!--</div>-->
-  <!--</div>-->
-
-  <!--<div ng-show="updateManager.registryData.retrievalStatus === updateManager.registryData.operationStatus.SUCCESS" class="menu-option-container" ng-class="{ 'menu-option-container-active' : openMenu2}">-->
-    <!--<div-->
-      <!--ng-repeat="image in updateManager.registryData.images"-->
-      <!--ng-click="component.selectClient(client)">-->
-      <!--<div class="menu-option">-->
-        <!--<span>{{image}}</span>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
 
 </div>
